Update Resume info

--- a/index.html
+++ b/index.html
@@ -13,24 +13,82 @@
     
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et tempus risus. Quisque pharetra ultricies lectus, sagittis efficitur ipsum pretium at. Fusce quis semper ipsum, vitae feugiat felis.</p>
     <hr />
-    <tr>
-        <td><a href="./public/portfolio.html">Portfolio</a></td>
-        <td><a href="./public/about.html">About</a></td>
-        <td><a href="./public/contact.html">Contact </a></td>
-    </tr>
+    <h3>Education</h3>
+    <ul>
+        <li>Computer Software Engineering Diploma (2022-Current)
+            <ul>
+            <li>Universidad Estatal a Distancia de Costa Rica (UNED)</li>
+            <li>Studies in computer science to be able to build Software to specifications, document it, implement it, and mantain it</li>
+            </ul>
+        </li>
+        <li>Licentiate degree in Civil Engineering (2009-2017)
+            <ul>
+            <li>Universidad de Costa Rica (UCR)</li>
+            <li>Graduation Thesis: Development of a distributed hydrological model using the diffusive wave scheme. Developed in MATLAB</li>
+            </ul>
+        </li>
+    </ul>
     <hr />
+    <h3>Work Experience</h3>
+    <ul>
+        <li>Jr. Infrastructure Design Engineer (2017-Current)
+            <ul>
+            <li>Infrastructure Design: potable water networks, storm sewer networks, sanitary sewer networks, rainwater retention systems, retaining walls, earthworks desgin, street level design</li>
+            </ul>
+        </li>
+    </ul>
+    <hr />
+    <h3>Skills</h3>
+    <h4>Hard Skills</h4>
+    <ul>
+        <li>C++
+            <ul>
+            <li>UNED:Introduction to Programming</li>
+            </ul>
+        </li>
+        <li>Java
+            <ul>
+            <li>UNED:Intermediate Programming</li>
+            </ul>
+        </li>
+        <li>C#
+            <ul>
+            <li>UNED:Advanced Programming</li>
+            </ul>
+        </li>
+        <li>Python
+            <ul>
+            <li>IBM: Python Basics for Data Science</li>
+            <li>IBM: Data Visualization with Python</li>
+            </ul>
+        </li>
+        <li>SQL (mySql)
+            <ul>
+            <li>UNED: Data Bases</li>
+            </ul>
+        </li>
+        <li>R
+            <ul>
+            <li>HardvardX: Data Science: R Basics</li>
+            <li>HardvardX: Data Science: Visualization</li>
+            </ul>
+        </li>
+        
+        <li>Microsoft Office package
+            <ul>
+            <li>Word,Excel,PowerPoint,Outlook</li>
+            </ul>
+        </li>
+    </ul>
+    <hr />
+    <footer>
+        <small>
+            © Andres Madrigal Guevara. All rights reserved.
+            <a href="./public/portfolio.html">Portfolio</a>
+            <a href="./public/about.html">About</a>
+            <a href="./public/contact.html">Contact </a>
+        </small>      
+        <hr />
+    </footer>
 </body>
 </html>
-
-
-
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
