Added Soft Skills and languages

--- a/index.html
+++ b/index.html
@@ -38,48 +38,83 @@
         </li>
     </ul>
     <hr />
+
     <h3>Skills</h3>
-    <h4>Hard Skills</h4>
-    <ul>
-        <li>C++
-            <ul>
-            <li>UNED:Introduction to Programming</li>
-            </ul>
-        </li>
-        <li>Java
-            <ul>
-            <li>UNED:Intermediate Programming</li>
-            </ul>
-        </li>
-        <li>C#
-            <ul>
-            <li>UNED:Advanced Programming</li>
-            </ul>
-        </li>
-        <li>Python
-            <ul>
-            <li>IBM: Python Basics for Data Science</li>
-            <li>IBM: Data Visualization with Python</li>
-            </ul>
-        </li>
-        <li>SQL (mySql)
-            <ul>
-            <li>UNED: Data Bases</li>
-            </ul>
-        </li>
-        <li>R
-            <ul>
-            <li>HardvardX: Data Science: R Basics</li>
-            <li>HardvardX: Data Science: Visualization</li>
-            </ul>
-        </li>
-        
-        <li>Microsoft Office package
-            <ul>
-            <li>Word,Excel,PowerPoint,Outlook</li>
-            </ul>
-        </li>
-    </ul>
+    <!-- Hard Skills -->
+    <div>
+        <h4>Hard Skills</h4>
+        <ul>
+            <li>C++
+                <ul>
+                    <li>UNED:Introduction to Programming</li>
+                </ul>
+            </li>
+            <li>Java
+                <ul>
+                    <li>UNED:Intermediate Programming</li>
+                </ul>
+            </li>
+            <li>C#
+                <ul>
+                    <li>UNED:Advanced Programming</li>
+                </ul>
+            </li>
+            <li>Python
+                <ul>
+                    <li>IBM: Python Basics for Data Science</li>
+                    <li>IBM: Data Visualization with Python</li>
+                </ul>
+            </li>
+            <li>SQL (mySql)
+                <ul>
+                    <li>UNED: Data Bases</li>
+                </ul>
+            </li>
+            <li>R
+                <ul>
+                    <li>HardvardX: Data Science: R Basics</li>
+                    <li>HardvardX: Data Science: Visualization</li>
+                </ul>
+            </li>
+            <li>Microsoft Office package
+                <ul>
+                    <li>Word,Excel,PowerPoint,Outlook</li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+    <!--#end Hard Skills -->
+
+    <!-- Soft Skills -->
+    <div>
+        <h4>Soft Skills</h4>
+        <ul>
+            <li>Logical approach to problem-solving</li>
+            <li>Strong time management skills</li>
+            <li>Highly organized and detail-oriented</li>
+            <li>Learning agility and decision-making</li>
+        </ul>
+    </div>
+    <!--#end Soft Skills -->
+    
+    <!--Languages -->
+    <div>
+        <h4>Languages</h4>
+        <ul>
+            <li>English
+                <ul>
+                    <li>C1: BELT Receptive Skills (2023)</li>
+                </ul>
+            </li>
+            <li>Spanish
+                <ul>
+                    <li>Native</li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+    <!--#end Soft Skills -->
+
     <hr />
     <footer>
         <small>
