Add div sections and courses info

--- a/index.html
+++ b/index.html
@@ -6,37 +6,45 @@
     <title>Andrés Resume</title>
 </head>
 <body>
-    <h1>Andrés Madrigal</h1>
     <img src="./assets/images/AM LOGO 2.PNG" height="180"/>
     <hr />
-    <h2>Software Developer</h2>
-    
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et tempus risus. Quisque pharetra ultricies lectus, sagittis efficitur ipsum pretium at. Fusce quis semper ipsum, vitae feugiat felis.</p>
+    <div>
+        <h2>Software Developer</h2>
+        <p>As a Civil Engineer with a strong passion for technology, I have a unique skill set that enables me to excel in software development. With a deep understanding of mathematics, physics, and coursework in several programming languages, it makes me equipped with a strong foundation in software development concepts. Through my work as a Civil Engineer, I have honed my problem-solving abilities, learned to approach complex issues with a methodical mindset and to collaborate with colleagues.</p>
+    </div>
     <hr />
-    <h3>Education</h3>
-    <ul>
-        <li>Computer Software Engineering Diploma (2022-Current)
-            <ul>
-            <li>Universidad Estatal a Distancia de Costa Rica (UNED)</li>
-            <li>Studies in computer science to be able to build Software to specifications, document it, implement it, and mantain it</li>
-            </ul>
-        </li>
-        <li>Licentiate degree in Civil Engineering (2009-2017)
-            <ul>
-            <li>Universidad de Costa Rica (UCR)</li>
-            <li>Graduation Thesis: Development of a distributed hydrological model using the diffusive wave scheme. Developed in MATLAB</li>
-            </ul>
-        </li>
-    </ul>
+    <!--Education-->
+    <div>
+        <h3>Education</h3>
+        <ul>
+            <li>Computer Software Engineering Diploma (2022-Current)
+                <ul>
+                    <li>Universidad Estatal a Distancia de Costa Rica (UNED)</li>
+                    <li>Studies in computer science to be able to build Software to specifications, document it, implement it, and mantain it</li>
+                </ul>
+            </li>
+            <li>Licentiate degree in Civil Engineering (2009-2017)
+                <ul>
+                    <li>Universidad de Costa Rica (UCR)</li>
+                    <li>Graduation Thesis: Development of a distributed hydrological model using the diffusive wave scheme. Developed in MATLAB</li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+    <!--END Education-->
     <hr />
-    <h3>Work Experience</h3>
-    <ul>
-        <li>Jr. Infrastructure Design Engineer (2017-Current)
-            <ul>
-            <li>Infrastructure Design: potable water networks, storm sewer networks, sanitary sewer networks, rainwater retention systems, retaining walls, earthworks desgin, street level design</li>
-            </ul>
-        </li>
-    </ul>
+    <!--Work Experience-->
+    <div>
+        <h3>Work Experience</h3>
+        <ul>
+            <li>Jr. Infrastructure Design Engineer (2017-Current)
+                <ul>
+                    <li>Infrastructure Design: potable water networks, storm sewer networks, sanitary sewer networks, rainwater retention systems, retaining walls, earthworks desgin, street level design</li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+    <!--END Work Experience-->
     <hr />
 
     <h3>Skills</h3>
@@ -74,6 +82,12 @@
                 <ul>
                     <li>HardvardX: Data Science: R Basics</li>
                     <li>HardvardX: Data Science: Visualization</li>
+                </ul>
+            </li>
+            <li>
+                HTML+CSS
+                <ul>
+                    <li>Udemy: The Complete Web Development Bootcamp</li>
                 </ul>
             </li>
             <li>Microsoft Office package
@@ -114,6 +128,22 @@
         </ul>
     </div>
     <!--#end Soft Skills -->
+    <!--Languages -->
+    <div>
+        <h4>Courses</h4>
+        <ul>
+            <li>
+                VideoGames Development
+                <ul>
+                    <li>UNEDGAMES: Universidad Estatal a Distancia</li>
+                </ul>
+            </li>
+            <li>The Complete Web Development Bootcamp</li>
+            <ul>
+                <li>Udemy</li>
+            </ul>
+        </ul>
+    </div>
 
     <hr />
     <footer>
@@ -127,3 +157,4 @@
     </footer>
 </body>
 </html>
+
